Update API doc & typescript.
