# doc/swagger.yml
@@ -256,6 +256,54 @@ paths:
           description: "error"
           schema:
             $ref: '#/definitions/ErrorInfo'
+  /user/{id}/avatar:
+    get:
+      tags:
+      - "user"
+      summary: "Get user avatar image"
+      operationId: "getUserAvatar"
+      produces:
+      - "image/jpeg"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        type: "integer"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: file
+        400:
+          description: "error"
+          schema:
+            $ref: '#/definitions/ErrorInfo'
+    post:
+      tags:
+      - "user"
+      summary: "Upload user avatar image"
+      operationId: "uploadUserAvatar"
+      produces:
+      - "application/xml"
+      - "application/json"
+      consumes:
+      - "multipart/form-data"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        type: "integer"
+      - in: formData
+        name: file
+        type: file
+        description: The image to upload.
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "error"
+          schema:
+            $ref: '#/definitions/ErrorInfo'
   /group:
     post:
       tags:
